--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <h2>Desarrollador</h2>
     <ul>
-      <li>Nombre del estudiante o equipo</li>
+      <li>jose a. vera</li>
     </ul>
 
     <h2>Reseñas</h2>
